kubernetes/manifests/selfhosted/nginx-test/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-test
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
  namespace: nginx-test
spec:
  redirectScheme:
    scheme: https
    permanent: true
