kubernetes/manifests/selfhosted/nginx-test/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-test-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-test-app
  template:
    metadata:
      labels:
        app: nginx-test-app
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
