kubernetes/manifests/selfhosted/nginx-test/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-test-service
  namespace: default
spec:
  selector:
    app: nginx-test-app
  ports:
    - port: 80
      targetPort: 80
