kubernetes/manifests/selfhosted/nginx-test/ingressRoute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-test-http-ingress
  namespace: default
spec:
  entryPoints:
    - web # This is Traefik's default entrypoint for HTTP traffic (port 80)
  routes:
    - match: Host(`test.slux-solutions.com`)
      kind: Rule
      middlewares: # Apply the middleware here
        - name: https-redirect
          namespace: default
      services: # A service must be defined, but it won't be reached
        - name: nginx-test-service
          port: 80
